# docs/swagger.json
@@ -275,6 +275,58 @@
                 }
             }
         },
+        "/bill/status/{billId}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bill"
+                ],
+                "summary": "Update Bill Status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "bill id",
+                        "name": "billId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "update bill status request (paid/cancelled)",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.BillUpdateStatusReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.StatusResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrRespController"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrRespController"
+                        }
+                    }
+                }
+            }
+        },
         "/bill/{billId}": {
             "get": {
                 "consumes": [
@@ -318,6 +370,7 @@
                 }
             },
             "put": {
+                "description": "Update Bill more detail but not status",
                 "consumes": [
                     "application/json"
                 ],
@@ -327,7 +380,7 @@
                 "tags": [
                     "Bill"
                 ],
-                "summary": "Update Bill Status",
+                "summary": "Update Bill",
                 "parameters": [
                     {
                         "type": "integer",
@@ -337,12 +390,12 @@
                         "required": true
                     },
                     {
-                        "description": "update bill status request (paid/cancelled)",
+                        "description": "update bill req",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.BillUpdateStatusReq"
+                            "$ref": "#/definitions/entity.UpdateBillReq"
                         }
                     }
                 ],
@@ -1013,9 +1066,6 @@
                 "bill_notes": {
                     "type": "string"
                 },
-                "bill_order_number": {
-                    "type": "string"
-                },
                 "bill_shipping_cost": {
                     "type": "number"
                 },
@@ -1425,6 +1475,44 @@
                 },
                 "balance_notes": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.UpdateBillReq": {
+            "type": "object",
+            "properties": {
+                "bill_account_number": {
+                    "type": "string"
+                },
+                "bill_attachments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Attachment"
+                    }
+                },
+                "bill_bank_name": {
+                    "type": "string"
+                },
+                "bill_due_date": {
+                    "type": "string"
+                },
+                "bill_items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.ItemPurchase"
+                    }
+                },
+                "bill_notes": {
+                    "type": "string"
+                },
+                "bill_shipping_cost": {
+                    "type": "number"
+                },
+                "bill_start_date": {
+                    "type": "string"
+                },
+                "supplier_id": {
+                    "type": "integer"
                 }
             }
         },
